syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "common.proto";

package doctorPageService;

option java_package = "ar.edu.itba.pod.grpc.doctorPageService";
option java_outer_classname = "DoctorPageServiceModel";
option java_multiple_files = true;

service DoctorPageService{
  rpc RegisterDoctor(google.protobuf.StringValue) returns (common.Doctor);
  rpc UnsuscribeDoctor(google.protobuf.StringValue) returns (common.Doctor);
}

